dist/LineScript-win64-20260616/tests/cases/compile_fail/parallel_for_outer_assign.lsc
main() -> i64 do
  declare total: i64 = 0
  parallel for i in 0..10 do
    total = total + i
  end
  println(total)
  return 0
end
